--- a/trunk/src/QMCWaveFunctions/Jastrow/kSpaceJastrowNotes.tex
+++ b/trunk/src/QMCWaveFunctions/Jastrow/kSpaceJastrowNotes.tex
@@ -2,6 +2,7 @@
 \usepackage{amsmath}
 \newcommand{\vG}{\mathbf{G}}
 \newcommand{\vr}{\mathbf{r}}
+\newcommand{\vI}{\mathbf{I}}
 \title{Notes on Reciprocal-Space Jastrow Factors}
 \date{\today}
 \author{Ken Esler}
@@ -9,31 +10,73 @@
 \maketitle
 \section{Two-body Jastrow}
 \begin{equation}
-J_2 = \sum_{\vG\neq \mathbf{0}}\sum_{i\neq j} c_\vG e^{i\vG\cdot(\vr_i-\vr_j)}
+J_2 = \sum_{\vG\neq \mathbf{0}}\sum_{i\neq j} a_\vG e^{i\vG\cdot(\vr_i-\vr_j)}
 \end{equation}
 This may be rewritten as
 \begin{eqnarray}
-J_2 & = & \sum_{\vG\neq \mathbf{0}}\sum_{i\neq j} c_\vG e^{i\vG\cdot\vr_i}e^{-i\vG\cdot\vr_j} \\
-& = & \sum_{\vG\neq \mathbf{0}} c_\vG \left\{
+J_2 & = & \sum_{\vG\neq \mathbf{0}}\sum_{i\neq j} a_\vG e^{i\vG\cdot\vr_i}e^{-i\vG\cdot\vr_j} \\
+& = & \sum_{\vG\neq \mathbf{0}} a_\vG \left\{
 \underbrace{\left[\sum_i e^{i\vG\cdot\vr_i} \right]}_{\rho_\vG}
-\underbrace{\left[\sum_j e^{-j\vG\cdot\vr_j} \right]}_{\rho_{-\vG}}  -1 \right\}
+\underbrace{\left[\sum_j e^{-i\vG\cdot\vr_j} \right]}_{\rho_{-\vG}}  -1 \right\}
 \end{eqnarray}
-The $-1$ is just a constant term and may be subsumed into the $c_\vG$
-coefficient a simple redefintion.  This leaves a simple, but general, form:
+The $-1$ is just a constant term and may be subsumed into the $a_\vG$
+coefficient by a simple redefintion.  This leaves a simple, but
+general, form:
 \begin{equation}
-J_2 = \sum_{\vG\neq\mathbf{0}} c_\vG \rho_\vG \rho_{-\vG}
+J_2 = \sum_{\vG\neq\mathbf{0}} a_\vG \rho_\vG \rho_{-\vG}
 \end{equation}
-We may not further constrain this on physical grounds.  First, we
+We may now further constrain this on physical grounds.  First, we
 recognize that $J_2$ should be real.  Since $\rho_{-\vG} =
 \rho_\vG^*$, it follows that $\rho_{\vG}\rho_{-\vG} = |\rho_\vG|^2$ is
-real, so that $c_\vG$ must be real.  Furthermore, we group the $\vG$'s
+real, so that $a_\vG$ must be real.  Furthermore, we group the $\vG$'s
 into $(+\vG, -\vG)$ pairs, and sum over only the positive vectors to
 save time.
 
-
-
-
 \section{One-body Jastrow}
+The one-body Jastrow has a similar form, but depends on the
+displacment from the electrons to the ions in the system.
+\begin{equation}
+J_1 = \sum_{\vG\neq\mathbf{0}} \sum_{\alpha}
+\sum_{i\in\vI^\alpha}\sum_{j\in\text{elec.}} b^{\alpha}_\vG
+  e^{i\vG\cdot(\vI^{\alpha}_i - \vr_j)},
+\end{equation}
+where $\alpha$ denotes the different ionic species.
+We may rewrite this in terms of $\rho^{\alpha}_\vG$, 
+\begin{equation}
+J_1 = \sum_{\vG\neq\mathbf{0}} \left[\sum_\alpha b^\alpha_\vG
+  \rho_\vG^\alpha\right] \rho_{-\vG},
+\end{equation}
+where
+\begin{equation}
+\rho^\alpha_\vG = \sum_{i\in\vI^\alpha} e^{i\vG\cdot\vI^\alpha_i}.
+\end{equation}
+We note that in the above equation, for a single configuration of the
+ions, the sum in brackets can be rewritten as a single constant.  This
+implies that the per-species one-body coefficents, $b^\alpha_\vG$, are
+underdetermined for single configuration of the ions.  In general, if
+we have $N$ species, we need $N$ linearly independent ion
+configurations to uniquely determine $b^{\alpha}_\vG$.  For this
+reason, we will drop the $\alpha$ superscript of $b_\vG$ for now.  
 
+If we do desire to find a reciprocal space one-body Jastrow that is
+transferable to systems with different ion positions and $N$ 
+ionic species, we must perform compute $b_\vG$ for $N$ different ion
+configurations.  We may then construct $N$ equations at each value of
+$\vG$ to solve for the $N$ unknown values, $b^\alpha_\vG$.
+
+In the two-body case, $a_\vG$ was constrained to be real by the fact
+that $\rho_\vG \rho_{-\vG}$ was real.  However, in the one-body case,
+there is no such guarantee about $\rho^\alpha_\vG \rho_\vG$.
+Therefore, in general, $b_\vG$ may be complex.
+
+\section{Symmetry considerations}
+For a crystal, many of the $\vG$-vectors will be equivalent by
+symmetry.  It is useful then, to divide the $\vG$-vectors into
+symmetry-related groups and then to require that they share a common
+coefficient.  Two vectors, $\vG$ and $\vG'$, may be considered
+symmetry related if, for all $\alpha$ and $\beta$,
+\begin{equation}
+\rho^\alpha_\vG \rho^\beta_{-\vG} = \rho^\alpha_{\vG'} \rho^\beta_{-\vG'}. 
+\end{equation}
 
 \end{document}
