Added more discussion.
git-svn-id: http://qmcpack.googlecode.com/svn@2675 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCWaveFunctions/Jastrow/kSpaceJastrowNotes.tex
+++ b/trunk/src/QMCWaveFunctions/Jastrow/kSpaceJastrowNotes.tex
@@ -78,5 +78,12 @@ symmetry related if, for all $\alpha$ and $\beta$,
 \begin{equation}
 \rho^\alpha_\vG \rho^\beta_{-\vG} = \rho^\alpha_{\vG'} \rho^\beta_{-\vG'}. 
 \end{equation}
+For the one-body term, we may also omit from our list of $\vG$-vectors
+those for which all species structure factors are zero.  This is
+equivalent to saying that, if we are tiling a primitive cell, we
+should include only the $\vG$-vectors of the primitive cell, and not
+the supercell.  Note that this is not the case for the two-body term,
+since the exchange-correlation hole should not have the periodicity of
+the primitive cell.
 
 \end{document}
