--- a/trunk/src/QMCHamiltonians/ZeroVariance.tex
+++ b/trunk/src/QMCHamiltonians/ZeroVariance.tex
@@ -8,6 +8,17 @@ The zero-variance term is of the form
 \begin{equation}
 \int \psi_T^2 (\hat{H} - E_L) \frac{\partial_\alpha \psi_T}{\psi_T}.
 \end{equation}
+Consider
+\begin{equation}
+\nabla \partial_\alpha \ln(\Psi_T) = \frac{\nabla \psi^\alpha_T}{\psi_T} - \frac{\psi^\alpha_T}{\psi_T} \frac{\nabla \psi_T}{\psi_T} 
+\end{equation}
+\begin{eqnarray}
+\nabla^2\partial_\alpha \ln(\psi_T) & = & \nabla\cdot \left[
+\frac{\nabla \psi^\alpha_T}{\psi_T} - \frac{\psi^\alpha_T}{\psi_T} \frac{\nabla \psi_T}{\psi_T} \right] \\
+& = & \frac{\nabla^2 \psi^\alpha_T}{\psi_T} - 2\frac{\nabla \psi^{\alpha}_T}{\psi_T} \cdot \frac{\nabla \psi_T}{\psi_T} - \frac{\psi^\alpha_T}{\psi_T} \left[\frac{\nabla^2\psi_T}{\psi_T} - 2\left(\frac{\nabla\psi_T}{\psi_T}\right)^2\right]
+\end{eqnarray}
+
+
 The kinetic contribution will involve the term,
 \begin{equation}
 \frac{\nabla^2 \psi_T^\alpha}{\psi_T} = \nabla^2 \partial_\alpha \ln
@@ -46,15 +57,15 @@ For the Laplacian, we have,
 \begin{equation}
 \nabla_n\cdot\nabla_n\left(\frac{\psi^\alpha}{\psi}\right) =
 (\nabla_n^2\phi_{ij}^\alpha)M^{-1}_{ji} +
-2(\nabla_n\phi_{ij})\cdot(\nabla_n M^{-1}_{ji}) +
+2(\nabla_n\phi_{ij}^\alpha)\cdot(\nabla_n M^{-1}_{ji}) +
 \phi^\alpha_{ij}(\nabla^2 M^{-1}_{ji})
 \end{equation} 
 Now, the last term is the novel one:
 \begin{eqnarray}
 \nabla^2 M^{-1} & = & -\nabla\cdot [M^{-1}(\nabla M) M^{-1}] \\
-& = & M^{-1}(\nabla M)M^{-1}(\nabla M) M^{-1} - M^{-1}(\nabla^2)M^{-1}
+& = & M^{-1}(\nabla M)M^{-1}(\nabla M) M^{-1} - M^{-1}(\nabla^2 M)M^{-1}
 + M^{-1}(\nabla M) M^{-1} (\nabla M) M^{-1} \\
-& = & -M^{-1} (\nabla^2) M^{-1} + 2 M^{-1}(\nabla M) M^{-1}(\nabla M) M^{-1}
+& = & -M^{-1} (\nabla^2 M) M^{-1} + 2 M^{-1}(\nabla M) M^{-1}(\nabla M) M^{-1}
 \end{eqnarray}
 
 
