--- a/trunk/docs/intro.tex
+++ b/trunk/docs/intro.tex
@@ -36,8 +36,8 @@ XYZ\_HOME} where \texttt{XYZ} stands for the name of package; the build utility
 can locate the libraries and use them.
 
 The build utility \cmake will look for {\tt XYZ\_HOME/include} for the header
-files and \texttt{XYZ\_HOME/lib} for the library files in addition to the standard
-paths.  When multiple environment variables apply to a library, e.g., {\tt
+files and \texttt{XYZ\_HOME/lib} for the library files in addition to the 
+standard paths.  When multiple environment variables apply to a library, e.g., {\tt
 blas/lapack}, the search is done according to the given  order.  On many HPC
 centers, these packages are managed by utilities like \textbf{module} and
 \textbf{softenv}. Consult the documentations on each site. 
