Can Amy do this a fifth time?
git-svn-id: http://qmcpack.googlecode.com/svn@3989 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/README
+++ b/trunk/README
@@ -1,9 +1,7 @@
 h1. Getting and building QMCPACK
-
-This is testing.
-
 h2. Prerequisite 
 
+* Testing
 * C/C++ compilers
 * cmake, build utility, http://www.cmake.org
 * blas/lapack, numerical library, use platform-optimized libraries
