Can Amy do this a sixth time?
git-svn-id: http://qmcpack.googlecode.com/svn@3991 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/README
+++ b/trunk/README
@@ -2,6 +2,7 @@ h1. Getting and building QMCPACK
 h2. Prerequisite 
 
 
+* Testing # 2
 * Testing 
 * C/C++ compilers
 * cmake, build utility, http://www.cmake.org
