Edited wiki page through web user interface.
git-svn-id: http://qmcpack.googlecode.com/svn@4006 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/wiki/Welcome.wiki
+++ b/wiki/Welcome.wiki
@@ -1,7 +1,6 @@
-#summary Welcome
+#summary Discussion on design issues, requirements for the developers, subversion update.
 
 = Introduction =
 
-This wiki is to discuss topics related to the development of qmcpack and other related projects: design issues, requirements for the developers, subversion update.
 
 = Getting started =
