Edited wiki page through web user interface.
git-svn-id: http://qmcpack.googlecode.com/svn@4007 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/wiki/Welcome.wiki
+++ b/wiki/Welcome.wiki
@@ -1,6 +1,6 @@
-#summary Discussion on design issues, requirements for the developers, subversion update.
-
-= Introduction =
-
+#summary Home to QMCPACK wiki
+#labels uuserguides
 
 = Getting started =
+* Download the source: follow the instructions on *Downloads* tap
+* [BuidlingQMCPACK]
