Edited wiki page through web user interface.
git-svn-id: http://qmcpack.googlecode.com/svn@4009 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/wiki/Welcome.wiki
+++ b/wiki/Welcome.wiki
@@ -4,4 +4,4 @@
 = Getting started =
 
   * Download the source: follow the instructions on *Downloads* tap
-  * [BuidlingQMCPACK]
+  * [BuidlingPackage Building QMCPACK]
